# fluffy-octo-happiness

./: CMakeLists.txt  EditorConfig.h.in  README.md
diagrams/: class.puml  flow.puml  usecase.puml
include/: common.hpp  cursor.hpp  editor.hpp  key_input.hpp  keyboard.hpp  mode.hpp  window.hpp
src/: Application.cpp  cursor.cpp  editor.cpp  keyboard.cpp  mode.cpp  window.cpp
